# app/Models/Cart.php
@@ -32,4 +32,23 @@ class Cart extends Model
         ])->get();
         return $book_existance;
     }
+    public function bookAlreadyAddedOrNot($book_id, $user_id)
+    {
+        $bookCart = Cart::where([
+            ['book_id', '=', $book_id],
+            ['user_id', '=', $user_id]
+        ])->first();
+        return $bookCart;
+    }
+    public function leftJoinBookWithCart($user_id){
+        $result = Cart::leftJoin('books', 'carts.book_id', '=', 'books.id')
+        ->select('books.id', 'books.name', 'books.author', 'books.description', 'books.Price', 'carts.book_quantity')
+        ->where('carts.user_id', '=', $user_id)
+        ->get();
+        return $result;
+    }
+    public function getCartId($cart_id){
+        $result = Cart::find($cart_id);
+        return $result;
+    }
 }
