# storage/api-docs/api-docs.json
@@ -1018,94 +1018,6 @@
                     }
                 ]
             }
-        },
-        "/api/auth/updatewishlist": {
-            "post": {
-                "summary": "Add Quantity to Existing Book in wishlist",
-                "description": " Add Book Quantity  in wishlist",
-                "operationId": "56f6edc3d5b509ba105adb8658cad058",
-                "requestBody": {
-                    "content": {
-                        "multipart/form-data": {
-                            "schema": {
-                                "required": [
-                                    "id",
-                                    "book_quantity"
-                                ],
-                                "properties": {
-                                    "id": {
-                                        "type": "integer"
-                                    },
-                                    "book_quantity": {
-                                        "type": "integer"
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        },
-                        "application/json": {
-                            "schema": {}
-                        }
-                    }
-                },
-                "responses": {
-                    "201": {
-                        "description": "Book Quantity updated Successfully"
-                    },
-                    "404": {
-                        "description": "Invalid authorization token"
-                    }
-                },
-                "security": [
-                    {
-                        "Bearer": []
-                    }
-                ]
-            }
-        },
-        "/api/auth/decreasewishlist": {
-            "post": {
-                "summary": "Decrease Quantity to Existing Book in wishlist",
-                "description": " decrease Book Quantity  in wishlist",
-                "operationId": "7d5f324d03ebb23619f8fed40d48313b",
-                "requestBody": {
-                    "content": {
-                        "multipart/form-data": {
-                            "schema": {
-                                "required": [
-                                    "id",
-                                    "book_quantity"
-                                ],
-                                "properties": {
-                                    "id": {
-                                        "type": "integer"
-                                    },
-                                    "book_quantity": {
-                                        "type": "integer"
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        },
-                        "application/json": {
-                            "schema": {}
-                        }
-                    }
-                },
-                "responses": {
-                    "201": {
-                        "description": "Book Quantity updated Successfully"
-                    },
-                    "404": {
-                        "description": "Invalid authorization token"
-                    }
-                },
-                "security": [
-                    {
-                        "Bearer": []
-                    }
-                ]
-            }
         }
     },
     "components": {
